push env install instruction